--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
+    "mammoth": "^1.9.1",
+    "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "openai": "^5.8.1",
+    "pdf-parse": "^1.1.1",
+    "streamifier": "^0.1.1",
     "winston": "^3.17.0"
   }
 }
